--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,31 +7,44 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12">
+        <!-- <h2>Templates</h2>
+        <div *ngIf="numbers$ | async as number; else pendingOrError">
+          <div *ngIf="!number.length">
+            Empty
+          </div>
+          {{number}}
+        </div>
+        <ng-template #pendingOrError>
+          Pending or Error
+        </ng-template> -->
 
-  <h2>Templates</h2>
-  <div *ngIf="numbers$ | async as number; else pendingOrError">
-    <div *ngIf="!number.length">
-      Empty
-    </div>
-    {{number}}
-  </div>
-  <ng-template #pendingOrError>
-    Pending or Error
-  </ng-template>
+        <h2>Pending and Value</h2>
+        <div *ngIf="numbers$ | pending | async">
+          Pending
+        </div>
+        <div *ngIf="numbers$ | async as numbers">
+          <p *ngFor="let number of numbers">{{number}}</p>
+        </div>
 
+        <h2>Pending and Empty</h2>
+        <div *ngIf="numbersEmpty$ | pending | async">
+          Pending
+        </div>
+        <div *ngIf="numbersEmpty$ | empty | async">
+          Empty Array
+        </div>
+        <h2>Pending and Error</h2>
+        <div *ngIf="numbersError$ | pending | async">
+          Pending
+        </div>
+        <div *ngIf="numbersError$ |error |  async as error">
+          Has error: {{error}}
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-
-  <h2>Pipes</h2>
-  <div *ngIf="numbers$ | pending | async">
-    Pending
-  </div>
-  <div *ngIf="numbers$ | empty | async">
-    Empty
-  </div>
-  <div *ngIf="numbers$ | error | async as error">
-    {{error}}
-  </div>
-  <div *ngIf="numbers$ | async as n">
-    {{n}}
-  </div>
 </ion-content>
